[package]
name = "nyapass"
version = "0.1.0"
edition = "2021"
description = "smol password manager tui :3"
license = "MIT"
repository = "https://github.com/0xdilo/nyapass"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
arboard = "3"
dirs = "5"
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
